[workspace]
resolver = "2"

members = ["cli", "core"]

[workspace.package]
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate's programmatic testing framework."
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/paritytech/try-runtime-cli"
repository = "https://github.com/paritytech/try-runtime-cli/"

[workspace.dependencies]
# This means >=9.3.0, <9.4.0
array-bytes = { version = "~9.3" }
assert_cmd = { version = "~2.1" }
async-trait = { version = "~0.1" }
bytesize = { version = "~2.3" }
clap = { version = "~4.5" }
env_logger = { version = "~0.11" }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "~0.14" }
log = { version = "~0.4.29" }
parity-scale-codec = { version = "~3.7" }
jsonrpsee = { version = "~0.24", features = ["http-client"] }
regex = { version = "~1.12" }
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
strum = "~0.27"
strum_macros = "~0.27"
tempfile = { version = "~3.24" }
tokio = { version = "~1.49" }
zstd = { version = "~0.13", default-features = false }

# Integration test-only dependency.
# Across the whole workspace, it is used solely as a dev dependency; thus it may be pinned to a git revision
# without impacting publication to crates.io .
substrate-cli-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "84064c944a46abef63eb7f66b3c1184dc2083d7e" }

# Polkadot SDK
frame-remote-externalities = { version = "0.56.0" }
frame-try-runtime = { version = "0.51.0" }
frame-support = { version = "45.0.0" }
frame-system = { version = "45.0.0" }

sc-cli = { version = "0.57.0" }
sc-executor = { version = "0.47.0" }
sc-service = { version = "0.56.0" }

sp-api = { version = "40.0.0" }
sp-consensus-aura = { version = "0.46.0" }
sp-consensus-babe = { version = "0.46.0" }
sp-core = { version = "39.0.0" }
sp-externalities = { version = "0.31.0" }
sp-inherents = { version = "40.0.0" }
sp-io = { version = "44.0.0" }
sp-keystore = { version = "0.45.0" }
sp-rpc = { version = "37.0.0" }
sp-runtime = { version = "45.0.0" }
sp-state-machine = { version = "0.49.0" }
sp-storage = { version = "22.0.0" }
sp-std = { version = "14.0.0" }
sp-timestamp = { version = "40.0.0" }
sp-transaction-storage-proof = { version = "40.0.0" }
sp-version = { version = "43.0.0" }
sp-weights = { version = "33.2.0" }

substrate-rpc-client = { version = "0.54.0" }

polkadot-primitives = { version = "22.0.0" }
cumulus-primitives-parachain-inherent = { version = "0.23.0" }
cumulus-primitives-core = { version = "0.23.0" }
cumulus-client-parachain-inherent = { version = "0.22.0" }

# Local
try-runtime-core = { path = "core" }
