[workspace]
resolver = "2"

members = ["cli", "core"]

[workspace.package]
version = "0.9.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate's programmatic testing framework."
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/paritytech/try-runtime-cli"
repository = "https://github.com/paritytech/try-runtime-cli/"

[workspace.dependencies]
# Reminder: "~a.b" means >= a.b.0, < a.(b + 1).0
array-bytes = { version = "~9.3" }
assert_cmd = { version = "~2.1" }
async-trait = { version = "~0.1" }
bytesize = { version = "~2.3" }
clap = { version = "~4.5" }
env_logger = { version = "~0.11" }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "~0.14" }
log = { version = "~0.4.29" }
parity-scale-codec = { version = "~3.7" }
regex = { version = "~1.12" }
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
strum = "~0.27"
strum_macros = "~0.27"
tempfile = { version = "~3.24" }
tokio = { version = "~1.49" }
zstd = { version = "~0.13", default-features = false }

# Integration test-only dependency.
# Across the whole workspace, it is used solely as a dev dependency; thus it may be pinned to a git revision
# without impacting publication to crates.io .
substrate-cli-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }

# Polkadot SDK (using latest master for relay_parent_offset support)
frame-remote-externalities = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }

sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }

substrate-rpc-client = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", rev = "0c70641e25b2" }

# Local
try-runtime-core = { path = "core" }
