load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "cli",
    srcs = ["main.rs"],
    compile_data = glob(
           include = ["**"],
           exclude = [
               "**/* *",
               "BUILD",
               "BUILD.bazel",
               "WORKSPACE",
               "WORKSPACE.bazel",
           ],
       ),
    edition = "2021",
    deps = ["//core",] + all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)
