[package]
name = "try-runtime-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "try-runtime"
path = "main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

sp-io = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-storage = { workspace = true }

try-runtime-core = { workspace = true }

frame-support = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
# Only needed in tests
frame-remote-externalities = { workspace = true }
regex = { workspace = true }
substrate-cli-test-utils = { workspace = true, features = ["try-runtime"] }
tempfile = { workspace = true }