load("@rules_rust//rust:defs.bzl", "rust_library")
load("@crate_index//:defs.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "core",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(
           include = ["**"],
           exclude = [
               "**/* *",
               "BUILD",
               "BUILD.bazel",
               "WORKSPACE",
               "WORKSPACE.bazel",
           ],
       ),
    edition = "2021",
    crate_name = "try_runtime_core",
    version = "0.1.0",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
    crate_features = [
     "cli",
    ]
)
