[package]
name = "try-runtime-core"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/try-runtime-cli/"
description = "Runtime testing and dry-running"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies] # todo: move to workspace
async-trait = "0.1.57"
clap = { version = "4.0.9", features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false }
log = "0.4.17"
parity-scale-codec = "3.2.2"
serde = "1.0.136"
serde_json = "1.0.85"
zstd = { version = "0.11.2", default-features = false }

# Substrate
frame-remote-externalities = { version = "0.28.0" }
frame-try-runtime = { version = "0.27.0", features = ["try-runtime"] }

sc-cli = { version = "0.29.0" }
sc-executor = { version = "0.25.0" }

sp-api = { version = "19.0.0" }
sp-core = { version = "20.0.0" }
sp-externalities = { version = "0.18.0" }
sp-io = { version = "22.0.0" }
sp-keystore = { version = "0.26.0" }
sp-runtime = { version = "23.0.0" }
sp-rpc = { version = "19.0.0" }
sp-state-machine = { version = "0.27.0" }
sp-weights = { version = "19.0.0" }

substrate-rpc-client = "0.26.0"

[features]
cli = [
    "clap",
]
