[package]
name = "try-runtime-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Substrate's programmatic testing framework for power users."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Crates.io
async-trait = "0.1.57"
clap = { version = "4.0.9", features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false }
log = "0.4.17"
parity-scale-codec = { version = "3.6.1", features = ["derive"] }
serde = "1.0.136"
serde_json = "1.0.85"
zstd = { version = "0.11.2", default-features = false }

# Substrate
frame-remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", features=["try-runtime"] }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "master" }

substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
# Crates.io
assert_cmd = "2.0.10"
regex = "1.7.3"
tempfile = "3.1.0"
tokio = "1.27.0"

# Substrate
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }

node-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
node-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }

substrate-cli-test-utils = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["try-runtime"]}

[features]
cli = ["clap"]
default = ["cli"]
