[package]
name = "try-runtime-core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Crates.io
tokio = { workspace = true }
async-trait = { workspace = true }
array-bytes = { workspace = true }
polkadot-primitives = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
zstd = { workspace = true }

frame-remote-externalities = { workspace = true }
frame-try-runtime = { workspace = true, features=["try-runtime"] }
frame-support = { workspace = true }
frame-system = { workspace = true }

sc-cli = { workspace = true }
sc-executor = { workspace = true }

sp-api = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-externalities = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keystore = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-std = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-version = { workspace = true }
sp-weights = { workspace = true }

cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-client-parachain-inherent = { workspace = true }

substrate-rpc-client = { workspace = true }
paris = "1.5.15"
similar-asserts = "1.6.0"