[package]
name = "libp2p-quic"
version = "0.7.0-alpha"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "TLS based QUIC transport implementation for libp2p"
repository = "https://github.com/libp2p/rust-libp2p"
license = "MIT"

[dependencies]
async-std = { version = "1.12.0", optional = true }
bytes = "1.4.0"
futures = "0.3.28"
futures-timer = "3.0.2"
if-watch = "3.0.1"
libp2p-core = "0.40.0"
libp2p-tls = "0.2.0"
libp2p-identity = "0.2.1"
log = "0.4"
parking_lot = "0.12.0"
quinn-proto = { version = "0.10.1", default-features = false, features = ["tls-rustls"] }
rand = "0.8.5"
rustls = { version = "0.21.2", default-features = false }
thiserror = "1.0.40"
tokio = { version = "*", default-features = false, features = ["net", "rt", "time"], optional = true }

[features]
tokio = ["dep:tokio", "if-watch/tokio"]
async-std = ["dep:async-std", "if-watch/smol"]

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.0"
libp2p-muxer-test-harness = { path = "../muxers/test-harness" }
libp2p-noise = "0.43.0"
libp2p-tcp = "0.40.0"
libp2p-yamux = "0.44.0"
quickcheck = "1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "stream_compliance"
required-features = ["async-std"]
